giftcard and type entity type definitions

--- a/commerce_giftcard.info.yml
+++ b/commerce_giftcard.info.yml
@@ -5,3 +5,5 @@ package: Commerce (contrib)
 core_version_requirement: ^8.8 || ^9
 dependencies:
   - commerce
+  - commerce_price
+configure: entity.commerce_giftcard_type.collection
