--- a/commerce_giftcard.services.yml
+++ b/commerce_giftcard.services.yml
@@ -1,6 +1,11 @@
 services:
   commerce_giftcard.giftcard_order_processor:
     class: Drupal\commerce_giftcard\GiftcardOrderProcessor
-    arguments: [ '@entity_type.manager' ]
+    arguments: [ '@entity_type.manager']
     tags:
       - { name: commerce_order.order_processor, priority: -100, adjustment_type: commerce_giftcard }
+  commerce_giftcard.order_subscriber:
+    class: Drupal\commerce_giftcard\EventSubscriber\OrderEventSubscriber
+    arguments: [ '@entity_type.manager']
+    tags:
+      - { name: event_subscriber }
