--- a/commerce_giftcard.services.yml
+++ b/commerce_giftcard.services.yml
@@ -4,8 +4,11 @@ services:
     arguments: [ '@entity_type.manager']
     tags:
       - { name: commerce_order.order_processor, priority: -100, adjustment_type: commerce_giftcard }
+  commerce_giftcard.code_generator:
+    class: Drupal\commerce_giftcard\GiftcardCodeGenerator
+    arguments: ['@database']
   commerce_giftcard.order_subscriber:
     class: Drupal\commerce_giftcard\EventSubscriber\OrderEventSubscriber
-    arguments: [ '@entity_type.manager']
+    arguments: [ '@entity_type.manager', '@commerce_giftcard.code_generator']
     tags:
       - { name: event_subscriber }
