Add a display label to giftcard type with token support

--- a/commerce_giftcard.services.yml
+++ b/commerce_giftcard.services.yml
@@ -1,7 +1,7 @@
 services:
   commerce_giftcard.giftcard_order_processor:
     class: Drupal\commerce_giftcard\GiftcardOrderProcessor
-    arguments: [ '@entity_type.manager']
+    arguments: [ '@token']
     tags:
     # Very low priority to ensure that giftcards are applied last and
     # include other adjustments.
